test/fixtures/install-consumer/negative/forbidden_sdk_kernel.ml
(** This fixture must not compile from an installed [temporal-sdk] package. *)

module Private = Temporal_sdk_kernel

let () = ()
